ggplot2 0.7.1  (2008-XX)
----------------------------------------

* stat_bin: correctly returns 0 when no observations in a bin (was previously returning NA)
* geom_freqpoly: draws frequency polygons (= stat_bin + geom_line)
* geom_path: lines have squared end
* ggopt now points to ggtheme
* stat_boxplot: deal with yet another new output format from quantreg

See CHANGELOG for changes in previous versions