@@ -121,6 +121,7 @@ scale_z_probit <- ScaleProbit$build_accessor(list(variable = "\"z\""))
 scale_z_reverse <- ScaleReverse$build_accessor(list(variable = "\"z\""))
 scale_z_sqrt <- ScaleSqrt$build_accessor(list(variable = "\"z\""))
 stat_bin <- StatBin$build_accessor()
+stat_bin2d <- StatBin2d$build_accessor()
 stat_boxplot <- StatBoxplot$build_accessor()
 stat_contour <- StatContour$build_accessor()
 stat_density <- StatDensity$build_accessor()
